# coding-agents-todo

./: .gitignore  Caddyfile  docker-compose.yml
_demo-prompts/: DEMO_PROMPT.md  launch-feature-agents.sh
_demo-prompts/features/: categories.md  dark-mode.md
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: fdeb5695a1b2_create_todos_table.py
backend/app/: __init__.py  database.py  main.py  models.py  schemas.py
backend/app/routers/: todos.py
backend/tests/: conftest.py  test_app.py  test_database.py  test_models.py  test_todos.py
context/: _index.md  architecture.md
context/patterns/: backend-api.md  frontend-api.md
frontend/: Dockerfile  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
frontend/src/: App.spec.ts  App.vue  style.css
frontend/src/api/: todos.spec.ts  todos.ts
